<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="100dp"
        android:indeterminateTint="@color/colorPrimaryDark"
        android:background="@drawable/bg_progressbar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textBigSize" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="110sp"
            android:layout_height="110sp"
            android:layout_marginTop="14dp"
            app:srcCompat="@drawable/ic_blood_donation" />

        <EditText
            android:id="@+id/input_email"
            android:layout_marginTop="24dp"
            android:hint="@string/input_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            style="@style/input"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_password"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                style="@style/input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btn_unlockPassword"
                android:layout_width="24dp"
                android:layout_height="28dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/input_password"
                app:layout_constraintEnd_toEndOf="@+id/input_password"
                app:layout_constraintHorizontal_bias="0.947"
                app:layout_constraintStart_toStartOf="@+id/input_password"
                app:layout_constraintTop_toTopOf="@+id/input_password" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/btn_login"
            android:layout_marginTop="24dp"
            android:text="@string/btn_ingresar"
            style="@style/btn_primary"/>

        <TextView
            android:id="@+id/lbl_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="@dimen/inputSmallMargins"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/lbl_registrar"
            android:textSize="@dimen/textSmallSize" />


        <!-- android:background="@drawable/progressbar_background" -->


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>