<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_progressbar"
        android:elevation="100dp"
        android:indeterminateTint="@color/colorPrimaryDark"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_home_gradient"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/inputNormalMargins"
            android:background="@color/colorInvisible"
            android:gravity="center"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:titleTextAppearance="@style/textStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/progressBar" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="@dimen/homeOptionHeight"
            android:layout_marginStart="@dimen/inputSmallMargins"
            android:layout_marginEnd="@dimen/inputSmallMargins"
            android:layout_marginTop="@dimen/inputSmallMarginsVertical"
            android:layout_marginBottom="@dimen/inputSmallMarginsVertical"
            android:background="@drawable/bg_home_option"
            android:drawableLeft="@drawable/ic_blood"
            android:text="@string/option_nuevaMuestra"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textNormalSize" />

        <Button
            android:id="@+id/btn_history"
            android:layout_width="match_parent"
            android:layout_height="@dimen/homeOptionHeight"
            android:layout_marginStart="@dimen/inputSmallMargins"
            android:layout_marginEnd="@dimen/inputSmallMargins"
            android:layout_marginTop="@dimen/inputSmallMarginsVertical"
            android:layout_marginBottom="@dimen/inputSmallMarginsVertical"
            android:background="@drawable/bg_home_option"
            android:drawableLeft="@drawable/ic_patient"
            android:text="@string/option_historial"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textNormalSize" />

        <Button
            android:id="@+id/btn_map"
            android:layout_width="match_parent"
            android:layout_height="@dimen/homeOptionHeight"
            android:layout_marginStart="@dimen/inputSmallMargins"
            android:layout_marginEnd="@dimen/inputSmallMargins"
            android:layout_marginTop="@dimen/inputSmallMarginsVertical"
            android:layout_marginBottom="@dimen/inputSmallMarginsVertical"
            android:background="@drawable/bg_home_option"
            android:drawableLeft="@drawable/ic_pin"
            android:text="@string/option_hospitalesCercanos"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textNormalSize" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>